# athena-tmr-lucid

./: .gitignore  AGENTS.md  README.md  muse_athena_protocol.py  muse_realtime_decoder.py  pyproject.toml  run_tests.py
docs/: USAGE.md  amused_upstream.md  architecture.md  contact_setup_local_app.md  data_model.md  pilot1_no_audio.md  pilot2_audio_calibration.md  pilot4_low_volume_cueing.md  protocol.md  safety.md  sdk_policy.md  validation.md
scripts/: check_forbidden_files.py  install_macos_launcher.py
src/muse_tmr/: contact.py
src/muse_tmr/annotations/: __init__.py  rem_annotations.py
src/muse_tmr/app/: server.py
src/muse_tmr/app/static/: app.js  index.html  styles.css
src/muse_tmr/audio/: __init__.py  audio_player.py  cue_library.py
src/muse_tmr/cli/: main.py
src/muse_tmr/features/: artifact_detection.py  eeg_features.py
src/muse_tmr/models/: __init__.py  heuristic_rem_detector.py  rem_detector.py
src/muse_tmr/protocol/: __init__.py  arousal_guard.py  randomization.py
src/muse_tmr/reports/: __init__.py  analysis.py  dream_report.py  source_diagnostics.py
src/muse_tmr/sources/: __init__.py  amused_source.py  brainflow_source.py  muse_sdk_source_stub.py  openmuse_lsl_source.py
src/muse_tmr/validation/: __init__.py  pilot1.py  pilot2.py  pilot4.py
tests/: test_arousal_guard.py  test_artifact_detection.py  test_athena_protocol.py  test_audio_player.py  test_brainflow_source.py  test_cli.py  test_contact.py  test_contact_gate.py  test_contact_monitor.py  test_cue_library.py  test_cued_uncued_analysis.py  test_dream_report.py  test_eeg_features.py  test_local_app.py  test_macos_launcher.py  test_muse_sdk_source_stub.py  test_openmuse_lsl_source.py  test_pilot1_validation.py  test_pilot2_validation.py  test_pilot4_cueing.py  test_randomization.py  test_realtime_decoder.py  test_rem_annotations.py  test_rem_detector.py  test_scheduler.py  test_sdk_policy.py  test_source_diagnostics.py  test_sources.py
tests/fixtures/contact/: all_good.jsonl  all_missing.jsonl  disconnect_after_good.jsonl  flapping_af7.jsonl  mixed_fair_good.jsonl  one_channel_poor.jsonl  stale_data.jsonl
