[build-system]
requires = ["setuptools==76.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amused"
version = "1.1.0"
authors = [
    {name = "Adrian Tadeusz Belmans", email = "adrian.belmans@gmail.com"},
]
description = "Open-source Python library for streaming data from Muse S (Athena) EEG headbands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "muse",
    "eeg",
    "ppg",
    "fnirs",
    "biometrics",
    "neuroscience",
    "brain-computer-interface",
    "bci",
    "bluetooth",
    "ble",
    "biosignals",
    "heart-rate",
    "meditation",
    "sleep-monitoring"
]
dependencies = [
    "bleak>=0.21.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.scripts]
muse-tmr = "muse_tmr.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
]
openmuse = [
    "pylsl>=1.16",
]

[project.urls]
Homepage = "https://github.com/nexon33/amused"
Documentation = "https://github.com/nexon33/amused#readme"
Repository = "https://github.com/nexon33/amused"
Issues = "https://github.com/nexon33/amused/issues"

[tool.setuptools]
packages = [
    "muse_tmr",
    "muse_tmr.audio",
    "muse_tmr.cli",
    "muse_tmr.data",
    "muse_tmr.features",
    "muse_tmr.models",
    "muse_tmr.protocol",
    "muse_tmr.reports",
    "muse_tmr.sources",
]
py-modules = [
    "amused",
    "muse_athena_protocol",
    "muse_data_parser",
    "muse_discovery",
    "muse_discovery_gui",
    "muse_exact_client",
    "muse_fnirs_processor",
    "muse_integrated_parser",
    "muse_ppg_heart_rate",
    "muse_raw_stream",
    "muse_realtime_decoder",
    "muse_replay",
    "muse_sleep_client",
    "muse_sleep_parser",
    "muse_stream_client",
    "muse_visualizer"
]
include-package-data = true

[tool.setuptools.package-dir]
muse_tmr = "src/muse_tmr"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore = ["__init__.py"]

[tool.muse_tmr.amused_py]
strategy = "forked-source"
pinned_upstream_remote = "https://github.com/Amused-EEG/amused-py"
pinned_upstream_ref = "bce20f98ddc7fa2efe3219d1b5d2f7554a55eb97"
local_policy = "Keep the BLE/data-source code in this repository until the REM-TMR layer is stable."
sync_policy = "Fetch upstream/main, review protocol changes, and port small patches intentionally."
contribution_policy = "Send general Muse BLE fixes upstream when they are not specific to the REM-TMR protocol."
